--- a/lang/de_de_utf8.lang
+++ b/lang/de_de_utf8.lang
@@ -1,4 +1,4 @@
-website_manager_help_file_msg = Ein Multidomain AddOn für REDAXO 4.5+
+website_manager_help_file_msg = Ein Multidomain AddOn fÃ¼r REDAXO 4.5+
 website_manager_frontend_link = zur Website
 website_manager_websites = Websites
 website_manager_themes = Themes
@@ -10,24 +10,24 @@ website_manager_prio_mode = Sortiermodus:
 website_manager_prio_mode_on = An
 website_manager_prio_mode_off = Aus
 website_manager_prior = Reihenfolge
-website_manager_create_website_security_msg = Website mit ID = 1 darf nicht hinzugefügt werden!
-website_manager_destroy_website_security_msg = Website mit ID = 1 darf nicht gelöscht werden!
+website_manager_create_website_security_msg = Website mit ID = 1 darf nicht hinzugefÃ¼gt werden!
+website_manager_destroy_website_security_msg = Website mit ID = 1 darf nicht gelÃ¶scht werden!
 website_manager_settings_msg = Bitte die Einstellungen in der <code>settings.inc.php</code> vornehmen.
-website_manager_install_rex_version = Dieses AddOn benötigt REDAXO Version 4.5.0 oder höher.
+website_manager_install_rex_version = Dieses AddOn benÃ¶tigt REDAXO Version 4.5.0 oder hÃ¶her.
 website_manager_install_colorizer = Bitte deinstallieren Sie das Colorizer Plugin des Backend Utilities AddOns.
 website_manager_install_frontend_link = Bitte deinstallieren Sie das Frontend Link Plugin des Backend Utilities AddOns.
 website_manager_install_customizer = Bitte deaktivieren Sie unter System folgende Optionen des Customizer Plugins: "Erkennungsfarbe" (leer lassen) und "Link zur Webseite anzeigen" (nein).
 website_manager_uninstall_codeline_hint = Bitte entfernen Sie die Codezeile (Setup Schritt 2) aus der master.inc.php von REDAXO!
 website_manager_uninstall_activate_first = Das AddOn muss aktiviert sein, bevor es deinstalliert werden kann!
-website_manager_uninstall_delete_generated = Bitte alle angelegten <a href="index.php?page=website_manager">Websites</a> (ausser ID=1) von Hand löschen!
+website_manager_uninstall_delete_generated = Bitte alle angelegten <a href="index.php?page=website_manager">Websites</a> (ausser ID=1) von Hand lÃ¶schen!
 
-website_manager_tools_cache_deleted = Cache für alle Websites gelöscht.
-website_manager_tools_cache_tool = Cache löschen für alle Websites
-website_manager_tools_cache_tool_desc = Wenn Sie ein Template oder Modul geändert haben, ist es nötig den Cache für alle Websites zu löschen. 
-website_manager_tools_cache_tool_button = Globales Cache löschen
-website_manager_tools_cache_tool_generate_no_files = Generierte Files (Image Manager Cache, Pathlists) nicht löschen
+website_manager_tools_cache_deleted = Cache fÃ¼r alle Websites gelÃ¶scht.
+website_manager_tools_cache_tool = Cache lÃ¶schen fÃ¼r alle Websites
+website_manager_tools_cache_tool_desc = Wenn Sie ein Template oder Modul geÃ¤ndert haben, ist es nÃ¶tig den Cache fÃ¼r alle Websites zu lÃ¶schen. 
+website_manager_tools_cache_tool_button = Globales Cache lÃ¶schen
+website_manager_tools_cache_tool_generate_no_files = Generierte Files (Image Manager Cache, Pathlists) nicht lÃ¶schen
 website_manager_tools_metainfo_fixer = Meta Info Fixer (Under Construction)
-website_manager_tools_metainfo_fixer_desc = Benutzen Sie dieses Tool wenn Sie Meta Infos hinzugefügt, geändert oder gelöscht haben um diese auf alle Websites zu synchronisieren. Wichtig: Nutzen Sie immer die Master-Website (ID=1) wenn Sie Ihre Meta Infos bearbeiten wollen.
+website_manager_tools_metainfo_fixer_desc = Benutzen Sie dieses Tool wenn Sie Meta Infos hinzugefÃ¼gt, geÃ¤ndert oder gelÃ¶scht haben um diese auf alle Websites zu synchronisieren. Wichtig: Nutzen Sie immer die Master-Website (ID=1) wenn Sie Ihre Meta Infos bearbeiten wollen.
 website_manager_tools_metainfo_fixer_button =  Meta Infos fixen
 website_manager_tools_metainfo_fixer_success = Meta Infos wurden gefixt.
 
@@ -39,12 +39,12 @@ website_manager_website_domain = Domain
 website_manager_website_title = Titel
 website_manager_website_add_website = Website erstellen
 website_manager_website_color = Erkennungsfarbe
-website_manager_website_colorpicker_choose = Wählen
+website_manager_website_colorpicker_choose = WÃ¤hlen
 website_manager_website_colorpicker_cancel = Abbrechen
 website_manager_website_functions = Funktionen
 website_manager_website_edit = bearbeiten
-website_manager_website_delete = löschen
-website_manager_website_delete_editmode = Bitte löschen Sie die Website über die Bearbeitungsansicht.\r\nKlicken Sie dazu auf den Bearbeiten-Link und dann auf den Löschen-Button.
+website_manager_website_delete = lÃ¶schen
+website_manager_website_delete_editmode = Bitte lÃ¶schen Sie die Website Ã¼ber die Bearbeitungsansicht.\r\nKlicken Sie dazu auf den Bearbeiten-Link und dann auf den LÃ¶schen-Button.
 website_manager_website_website_edit = Website bearbeiten
 website_manager_website_website_add = Website anlegen
 website_manager_website_id_exists = Eine Website mit dieser ID existiert bereits!
@@ -56,17 +56,17 @@ website_manager_website_protocol = Protokoll
 website_manager_website_http = http
 website_manager_website_https = https
 website_manager_edit_button_key = Website bearbeiten
-website_manager_website_master_website_disallow_delete = Sie können die Master-Website (ID = 1) nicht löschen!
-website_manager_website_delete_confirm = Wollen Sie diese Website inkl. aller Artikel und Medienpool-Dateien wirklich unwiderruflich löschen?
-website_manager_website_delete_trunedoff = Das Löschen von Websites wurde aus Sicherheitsgründen unterbunden.\r\nBitte kontaktieren Sie Ihren Webmaster.
+website_manager_website_master_website_disallow_delete = Sie kÃ¶nnen die Master-Website (ID = 1) nicht lÃ¶schen!
+website_manager_website_delete_confirm = Wollen Sie diese Website inkl. aller Artikel und Medienpool-Dateien wirklich unwiderruflich lÃ¶schen?
+website_manager_website_delete_trunedoff = Das LÃ¶schen von Websites wurde aus SicherheitsgrÃ¼nden unterbunden.\r\nBitte kontaktieren Sie Ihren Webmaster.
 
 website_manager_setup_step1 = Schritt 1: Einstellungen vornehmen
-website_manager_setup_step1_msg1 = Installieren Sie zuerst alle AddOns die Sie für die einzelnen Websites einsetzen wollen.<br />Passen Sie dann alle Einstellungen des Website Manager AddOns in der <code>settings.inc.php</code> entsprechend Ihres Projekts an.
+website_manager_setup_step1_msg1 = Installieren Sie zuerst alle AddOns die Sie fÃ¼r die einzelnen Websites einsetzen wollen.<br />Passen Sie dann alle Einstellungen des Website Manager AddOns in der <code>settings.inc.php</code> entsprechend Ihres Projekts an.
 website_manager_setup_step2 = Schritt 2:  Website Manager Initialisierung
-website_manager_setup_step2_msg1 = In der <code>master.inc.php</code> von REDAXO relativ weit unten bitte die Zeilen im Kasten direkt nach dieser Zeile hier einfügen: <code>include_once $REX['INCLUDE_PATH'].'/clang.inc.php';</code>
+website_manager_setup_step2_msg1 = In der <code>master.inc.php</code> von REDAXO relativ weit unten bitte die Zeilen im Kasten direkt nach dieser Zeile hier einfÃ¼gen: <code>include_once $REX['INCLUDE_PATH'].'/clang.inc.php';</code>
 website_manager_setup_step2_msg2 = Sobald Sie dies gemacht haben, erhalten Sie vollen Zugriff auf das Website Manager AddOn.
-website_manager_setup_step3 = Schritt 3: Websites hinzufügen
-website_manager_setup_step3_msg1 = Das war's schon. Sie können nun neue <a href="index.php?page=website_manager">Websites hinzufügen</a> und haben hoffentlich Freude mit dem AddOn... ;)
+website_manager_setup_step3 = Schritt 3: Websites hinzufÃ¼gen
+website_manager_setup_step3_msg1 = Das war's schon. Sie kÃ¶nnen nun neue <a href="index.php?page=website_manager">Websites hinzufÃ¼gen</a> und haben hoffentlich Freude mit dem AddOn... ;)
 
 website_manager_help_chapter_readme = Readme
 website_manager_help_chapter_changelog = Changelog
@@ -74,7 +74,7 @@ website_manager_help_chapter_license = Lizenz
 website_manager_help_chapter_debug = Debug
 website_manager_help_chapter_log = Log
 
-website_manager_help_log_msg = Es findet ein Logging statt wenn man eine Website hinzufügt oder entfernt.<br />Die entsprechenden Logdateien sind hier zu finden: <code>/website_manager/generated/log/</code>
+website_manager_help_log_msg = Es findet ein Logging statt wenn man eine Website hinzufÃ¼gt oder entfernt.<br />Die entsprechenden Logdateien sind hier zu finden: <code>/website_manager/generated/log/</code>
 
 website_manager_no_perm_msg = Sie besitzen nicht die erforderlichen Rechte!
 
