--- a/lang/de_de_utf8.lang
+++ b/lang/de_de_utf8.lang
@@ -59,13 +59,14 @@ website_manager_website_master_website_disallow_delete = Sie können die Master-
 website_manager_website_delete_confirm = Wollen Sie diese Website inkl. aller Artikel und Medienpool-Dateien wirklich unwiderruflich löschen?
 website_manager_website_delete_trunedoff = Das Löschen von Websites wurde aus Sicherheitsgründen unterbunden.\r\nBitte kontaktieren Sie Ihren Webmaster.
 
-website_manager_setup_step1 = Schritt 1: Einstellungen vornehmen
-website_manager_setup_step1_msg1 = Installieren Sie zuerst alle AddOns die Sie für die einzelnen Websites einsetzen wollen.<br />Passen Sie dann alle Einstellungen des Website Manager AddOns in der <code>settings.inc.php</code> entsprechend Ihres Projekts an.
+website_manager_setup_step1 = Schritt 1: Vorbereitungen
+website_manager_setup_step1_msg1 = Bitte lesen Sie zuerst die <a href="index.php?page=website_manager&subpage=help">Readme</a> um sich mit den Besonderheiten dieses AddOns vertraut zu machen.<br />Installieren Sie dann alle AddOns die Sie für die einzelnen Websites einsetzen wollen.<br />Passen Sie dann alle Einstellungen des Website Manager AddOns in der <code>settings.inc.php</code> entsprechend Ihres Projekts an.
 website_manager_setup_step2 = Schritt 2:  Website Manager Initialisierung
-website_manager_setup_step2_msg1 = In der <code>master.inc.php</code> von REDAXO relativ weit unten bitte die Zeilen im Kasten direkt nach dieser Zeile hier einfügen: <code>include_once $REX['INCLUDE_PATH'].'/clang.inc.php';</code>
+website_manager_setup_step2_msg1a = In der <code>master.inc.php</code> von REDAXO relativ weit unten bitte direkt nach diesen Zeilen:
+website_manager_setup_step2_msg1b = diese Zeilen hier einfügen:
 website_manager_setup_step2_msg2 = Sobald Sie dies gemacht haben, erhalten Sie vollen Zugriff auf das Website Manager AddOn.
 website_manager_setup_step3 = Schritt 3: Websites hinzufügen
-website_manager_setup_step3_msg1 = Das war's schon. Sie können nun neue <a href="index.php?page=website_manager">Websites hinzufügen</a> und haben hoffentlich Freude mit dem AddOn... ;)
+website_manager_setup_step3_msg1 = Das war's schon. Sie können nun neue <a href="index.php?page=website_manager">Websites hinzufügen</a>.
 
 website_manager_help_chapter_readme = Readme
 website_manager_help_chapter_changelog = Changelog
