Data dir logic 2

--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -19,6 +19,7 @@ website_manager_install_customizer = Bitte deaktivieren Sie unter System folgend
 website_manager_uninstall_codeline_hint = Bitte entfernen Sie die Codezeile (Setup Schritt 2) aus der master.inc.php von REDAXO!
 website_manager_uninstall_activate_first = Das AddOn muss aktiviert sein, bevor es deinstalliert werden kann!
 website_manager_uninstall_delete_generated = Bitte alle angelegten <a href="index.php?page=website_manager">Websites</a> (ausser ID=1) von Hand löschen!
+website_manager_uninstall_allow_uninstall = In den Einstellungen des Addons muss zuerst das Deinstallieren des Addons erlaubt werden! Achtung!!! Alle Daten unter "/include/data/addons/website_manager/" gehen verloren.
 
 website_manager_tools_cache_deleted = Cache für alle Websites gelöscht.
 website_manager_tools_cache_tool = Cache löschen für alle Websites
@@ -82,4 +83,5 @@ website_manager_config_ok = Einstellungen wurden aktualisiert.
 website_manager_config_error = Einstellungen konnte nicht gespeichert werden!
 website_manager_install_make_dir = Der Ordner "/redaxo/include/{0}/" kann nicht angelegt werden, überprüfen Sie die Schreibrechte oder legen Sie den Ordner von Hand an und geben ihm Schreibrechte.
 website_manager_install_perm_dir = Der Ordner "/redaxo/include/{0}/" benötigt Schreibrechte!
+website_manager_install_custom_dir_copy_failed = Die Custom-Files aus dem Install Ordner konnten nicht nach "{0}" kopiert werden!
 
