--- a/lang/de_de_utf8.lang
+++ b/lang/de_de_utf8.lang
@@ -3,7 +3,7 @@ website_manager_frontend_link = zur Website
 website_manager_websites = Websites
 website_manager_themes = Themes
 website_manager_tools = Tools
-website_manager_options = Einstellungen
+website_manager_settings = Einstellungen
 website_manager_setup = Setup
 website_manager_help = Hilfe
 website_manager_prio_mode = Sortiermodus:
