Backend settings page

--- a/lang/de_de_utf8.lang
+++ b/lang/de_de_utf8.lang
@@ -85,3 +85,23 @@ website_manager_install_make_dir = Der Ordner "/redaxo/include/{0}/" kann nicht 
 website_manager_install_perm_dir = Der Ordner "/redaxo/include/{0}/" benötigt Schreibrechte!
 website_manager_install_custom_dir_copy_failed = Die Custom-Files aus dem Install Ordner konnten nicht nach "{0}" kopiert werden!
 
+website_manager_settings_tag_editor_hint_addon = Mehrere Addons mit Enter hinzufügen
+website_manager_settings_tag_editor_hint_plugin = Mehrere Plugins mit Enter hinzufügen im Format Addon:Plugin
+website_manager_settings_reinstall_addons = Zu reinstallierende Addons
+website_manager_settings_reinstall_plugins = Zu reinstallierende Plugins
+website_manager_settings_identical_media = Gleiche Medien
+website_manager_settings_identical_templates = Gleiche Templates
+website_manager_settings_identical_modules = Gleiche Module
+website_manager_settings_identical_clangs = Gleiche Sprachen<br />(noch nicht unterstützt)
+website_manager_settings_identical_meta_infos = Gleiche MetaInfos<br />(noch nicht unterstützt)
+website_manager_settings_identical_image_types = Gleiche Bildytpen
+website_manager_settings_ignore_permissions = Benutzerrechte ignorieren
+website_manager_settings_allow_website_delete = Websites dürfen gelöschen werden
+website_manager_settings_show_metamenu_frontend_link = Frontend Link "zur Website" anzeigen
+website_manager_settings_show_website_name_frontend_link = Frontend Link mit Name der Website anzeigen
+website_manager_settings_show_color_bar = Farbbalken
+website_manager_settings_colorize_favicon = Favicon einfärben
+website_manager_settings_allow_www_non_www_domains = WWW und Nicht-WWW durchlassen
+website_manager_settings_allow_uninstall = Uninstall des Addons erlauben
+website_manager_settings_save = Einstellungen speichern
+
